added Amalthea parts to notebooks

--- a/Jupiter.ipynb
+++ b/Jupiter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "id": "9c83ec16-9763-40fa-b8b5-8ecbe7d90670",
    "metadata": {
     "tags": []
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 68,
    "id": "964e5933-24c3-4f0f-ad0d-97551b5b8551",
    "metadata": {
     "tags": []
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "id": "e203e734-7d5c-4e7b-bff8-fb6d5c9b34c3",
    "metadata": {
     "tags": []
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 70,
    "id": "467e031a-837c-41be-afe0-4a840b667f39",
    "metadata": {
     "tags": []
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 71,
    "id": "f73a0f82-0849-4edc-8a5f-f678ef25b0d3",
    "metadata": {},
    "outputs": [
@@ -166,8 +166,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "5867eeac-ce1f-44d8-a73b-1336f06e5c5a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amalthea's period = 43288.523495553316 s = 0.5010245774948301 days\n"
+     ]
+    }
+   ],
+   "source": [
+    "a_amalthea = 1.82e10\n",
+    "logP_amalthea = m*np.log10(a_amalthea)+b\n",
+    "P_amalthea = 10**(logP_amalthea)\n",
+    "print(f'Amalthea\\'s period = {P_amalthea} s = {P_amalthea/(24*3600)} days')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0b0e7c8-9835-43c5-a372-37cada35fd7e",
    "metadata": {},
    "outputs": [],
    "source": []
